Fix elements alignment on forms

--- a/web/src/app/venues/edit-tree-view-node-form/edit-tree-view-node-form.component.sass
+++ b/web/src/app/venues/edit-tree-view-node-form/edit-tree-view-node-form.component.sass
@@ -10,6 +10,7 @@ $error-color: #a94442
 
   .inputs-container
     width: $inputs-width
+    margin-right: 10px
 
     @media screen and (max-width: $small-resolution)
       width: 150%
@@ -29,3 +30,9 @@ $error-color: #a94442
 
   .buttons-container
     margin-left: auto
+
+    .btn
+      width: 75px
+
+    .cancel-button
+      padding: 12px
