--- a/web/src/app/venues/venues.component.sass
+++ b/web/src/app/venues/venues.component.sass
@@ -12,8 +12,8 @@
     border-bottom: solid 1px #eee
 
     .form-container
-      padding: 0 0 45px 0
-      margin: 40px 0 0 0
+      padding-bottom: 20px
+      margin-top: 20px
 
     .form-title
       font-size: 16px
